--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>A simple HTML document</title>
+    <title>All About RJ</title>
 </head>
 <body>
-    <p>Hello World!<p>
+    <p>Hello! My name is RJ Kimmerle. I live in Augusta Georgia, and I enjoy traveling, video games, and long walks on the beach. 
+
+I look forward to learning everything there is to know!<p>
 </body>
 </html>
